--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -32,9 +32,7 @@
         <br>
         <hr>
 
-        <p><i>Created by <a href="https://github.com/bfwg">Fan Jin</a></i></p>
-        <p><i>Click below to go to repository</i></p>
-        <button (click)="repository()" mat-raised-button color="accent">GitHub Repository</button>
+        <p><i>Created by <a href="#">Victor Abeledo</a></i></p>
 
       </mat-card-content>
 
