--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -41,13 +41,9 @@
 
       <p>
         <i>Created by
-          <a href="https://github.com/bfwg">Fan Jin</a>
+          <a href="#">Victor Abeledo</a>
         </i>
       </p>
-      <p>
-        <i>Click below to go to repository</i>
-      </p>
-      <button (click)="repository()" mat-raised-button color="accent">GitHub Repository</button>
 
     </mat-card-content>
 
