add logic to make /api/word-transformation-all work. add ui. its returning [{}]

--- a/frontend/src/app/exercises/exercises.component.html
+++ b/frontend/src/app/exercises/exercises.component.html
@@ -1,3 +1,16 @@
+<div class="content" fxLayout="row" fxLayoutAlign="center none">
 <p>
   exercises works!
 </p>
+<app-api-card
+fxFlex
+title="Word transformation"
+subTitle="Admin"
+imgUrl="assets/image/foo.png"
+content='This is a demo public endpoint which requires admin authentication.'
+apiText="/api/word-transformation/all"
+[responseObj]="fooResponse"
+(apiClick)="makeRequest($event)"
+>
+</app-api-card>
+</div>
