change message to custom one for created word exercise tasks. change test api cards layout. add Guard to /exercises route

--- a/frontend/src/app/exercises/exercises.component.html
+++ b/frontend/src/app/exercises/exercises.component.html
@@ -1,35 +1,3 @@
-<div class="content" fxLayout="row" fxLayoutAlign="center none">
-<app-api-card
-fxFlex
-title="Word transformation"
-subTitle="User"
-imgUrl="assets/image/user.png"
-content='This is a demo endpoint that requires user authentication.'
-apiText="/api/word-transformation/{authorId}"
-[responseObj]="userResponse"
-(apiClick)="makeByIdRequest($event)"
->
-</app-api-card>
-<app-api-card
-fxFlex
-title="Word transformation"
-subTitle="Admin"
-imgUrl="assets/image/foo.png"
-content='This is a demo endpoint that requires admin authentication.'
-apiText="/api/word-transformation/all"
-[responseObj]="fooResponse"
-(apiClick)="makeRequest($event)"
->
-</app-api-card>
-<app-api-card
-fxFlex
-title="Word transformation post"
-subTitle="Admin"
-imgUrl="assets/image/foo.png"
-content='This is a demo endpoint that requires admin authentication.'
-apiText="/api/word-transformation/new"
-[responseObj]="postRequest"
-(apiClick)="makeExercisePost($event)"
->
-</app-api-card>
+<div class="word-transformation">
+<p>word transformation exercises</p>
 </div>
