fix router issue (the problem was material BrowserAnimation).

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -64,7 +64,7 @@
   imgUrl="assets/image/foo.png"
   content='This is a demo endpoint that requires admin authentication.'
   apiText="/api/word-transformation/new"
-  [responseObj]="postRequest"
+  [responseObj]="postRequestResponse"
   (apiClick)="makeExercisePost($event)"
   >
   </app-api-card>
