--- a/frontend/src/app/component/header/header.component.html
+++ b/frontend/src/app/component/header/header.component.html
@@ -22,7 +22,7 @@
         *ngIf="hasSignedIn()"
         mat-button mat-ripple
         [matMenuTriggerFor]="accountMenu">
-        <span>Aloha, {{userName()}}</span>
+        <span>Hi, {{userName()}}</span>
       </button>
       <button
         class="greeting-hamburger"
