--- a/frontend/src/app/signup/signup.component.html
+++ b/frontend/src/app/signup/signup.component.html
@@ -3,7 +3,7 @@
   <mat-card elevation="5" fxFlex>
 
     <mat-card-subtitle>
-      <h2>Angular Spring Starter</h2>
+      <h2>Poliglota</h2>
     </mat-card-subtitle>
 
     <mat-card-title>
