--- a/frontend/src/app/component/header/header.component.html
+++ b/frontend/src/app/component/header/header.component.html
@@ -14,9 +14,20 @@
       <button *ngIf="!hasSignedIn()" routerLink="/login" mat-button mat-ripple>
         <span>Login</span>
       </button>
-      <button *ngIf="hasSignedIn()" routerLink="/exercises" mat-button mat-ripple>
+      <button
+        *ngIf="hasSignedIn()"
+        mat-button
+        mat-ripple
+        [matMenuTriggerFor]="exercisesMenu"
+      >
         <span>Exercises</span>
       </button>
+      <mat-menu #exercisesMenu
+        class="app-header-accountMenu"
+        yposition="below"
+        [overlapTrigger]="false">
+        <exercises-menu ></exercises-menu>
+      </mat-menu> 
       <button
         class="greeting-button"
         *ngIf="hasSignedIn()"
