--- a/frontend/src/app/new-exercise/new-exercise.component.html
+++ b/frontend/src/app/new-exercise/new-exercise.component.html
@@ -1,11 +1,57 @@
 <div>
-    <!-- <section>
+    <form (ngSubmit)="wordTransformationPost()">
         <h2>Create</h2>
-        <button mat-raised-button (click)="openWordTransformation()">Word transformation</button>
-    </section>
+        <mat-expansion-panel>
+          <mat-expansion-panel-header>
+            <mat-panel-title>
+              Word transformation
+            </mat-panel-title>
+            <mat-panel-description>
+              Type a sentence, a word to transform and an answer
+            </mat-panel-description>
+          </mat-expansion-panel-header>
+          <div *ngFor="let element of wordTransformations; let i = index">
+          <mat-form-field>
+            <textarea
+              matInput
+              placeholder="Sentence"
+              [value]="element.sentence"
+              (change)="wordTransformations[i].sentence = $event.target.value"
+            ></textarea>
+          </mat-form-field>
+      
+          <mat-form-field>
+            <input
+              matInput
+              placeholder="Word"
+              [value]="element.word"
+              (change)="wordTransformations[i].word = $event.target.value"
+            >
+          </mat-form-field>
+
+          <mat-form-field>
+            <input
+              matInput
+              placeholder="Answer"
+              [value]="element.answer"
+              (change)="wordTransformations[i].answer = $event.target.value"
+            >
+          </mat-form-field>
+
+          <button mat-icon-button (click)="onAddClick()" type="button" *ngIf="isLast(i)">
+            <mat-icon>add</mat-icon>
+          </button>
+
+          </div>
+
+          <mat-action-row>
+            <button type="submit" mat-button>Submit</button>
+          </mat-action-row>
+        </mat-expansion-panel>
+      </form>
       <section *ngIf="submitted">
         <h3>Submit status</h3>
         <p>{{status}}</p>
-      </section> -->
+      </section>
 
 </div>
