fix dialog content bug. avoid naming dialog selector 'dialog', use 'dialog-component' instead

--- a/frontend/src/app/new-exercise/new-exercise.component.html
+++ b/frontend/src/app/new-exercise/new-exercise.component.html
@@ -66,8 +66,8 @@
             <textarea
               matInput
               placeholder="Text"
-              [value]="optionPicker.text"
-              (change)="optionPicker.text = $event.target.value"
+              [value]="optionPopup.text"
+              (change)="optionPopup.text = $event.target.value"
               (dblclick)="optionPickerSelectHandler($event)"
             ></textarea>
           </mat-form-field>
