--- a/frontend/src/app/new-exercise/new-exercise.component.html
+++ b/frontend/src/app/new-exercise/new-exercise.component.html
@@ -7,7 +7,7 @@
               Word transformation
             </mat-panel-title>
             <mat-panel-description>
-              Type a sentence, a word to transform and an answer
+              Type a sentence, a word to transform and an answer. Usar * para indicar donde debe ir la palabra a transformar
             </mat-panel-description>
           </mat-expansion-panel-header>
           <div *ngFor="let element of wordTransformations; let i = index">
