--- a/frontend/src/app/component/dialog/dialog.component.html
+++ b/frontend/src/app/component/dialog/dialog.component.html
@@ -1,7 +1,47 @@
 
-<h2 mat-dialog-title>Delete all</h2>
-<mat-dialog-content>Are you sure?</mat-dialog-content>
+<h2 mat-dialog-title>Add selection task</h2>
+<mat-dialog-content>Two options min, five max</mat-dialog-content>
+<form>
+<mat-form-field>
+<input
+matInput
+placeholder="Answer"
+[value]="data.selectedWord"
+(change)="data.selectedWord = $event.target.value"
+[disabled]="true"
+>
+</mat-form-field>
+
+<div *ngFor="let element of choices; let i = index">
+
+  <mat-form-field>
+    <input
+      matInput
+      placeholder="option"
+      [value]="element"
+      (change)="choices[i] = $event.target.value"
+    >
+  </mat-form-field>
+
+  <button mat-icon-button (click)="choices.splice(i,1)" type="button" *ngIf="choices.length !== i-1 && choices.length > 1">
+    <mat-icon>close</mat-icon>
+  </button>
+
+  <button mat-icon-button (click)="choices.push('')" type="button" *ngIf="(choices.length - 1) === i && choices.length < 5">
+    <mat-icon>add</mat-icon>
+  </button>
+
+</div>
+
 <mat-dialog-actions>
-  <button mat-button mat-dialog-close>No</button>
-  <button mat-button [mat-dialog-close]="true">Yes</button>
+  <button mat-button mat-dialog-close>Cancel</button>
+  <button
+    mat-button
+    [mat-dialog-close]="true"
+    (click)="this.dialogRef.close({answer: data.selectedWord,selectionStart: data.selectionStart,selectionEnd: data.selectionEnd,choices: choices})"
+    mat-button
+  >
+    Add
+  </button>
 </mat-dialog-actions> 
+</form>
