Proyecto con Validaciones, falta cambiar backend.

--- a/frontend/src/app/component/footer/footer.component.html
+++ b/frontend/src/app/component/footer/footer.component.html
@@ -1,7 +1,13 @@
-<p style="margin: 0px auto; padding: 0px; color: rgba(255, 255, 255, 0.541176); max-width: 356px;"><!-- react-text: 103 -->
-  Hand crafted with love by <!-- /react-text -->
-  <a href="#" style="color: rgba(255, 255, 255, 0.870588);">Victor Abeledo</a>
+<p style="margin: 0px auto; padding: 0px; color: rgba(255, 255, 255, 0.541176); max-width: 356px;">
+    <!-- react-text: 103 -->
+    Hand crafted with love by
+    <!-- /react-text -->
 </p>
+<div>
+    <a href="#" style="color: rgba(255, 255, 255, 0.870588);">Victor Abeledo, </a>
+    <a href="#" style="color: rgba(255, 255, 255, 0.870588);">Lucio Balestieri, </a>
+    <a href="#" style="color: rgba(255, 255, 255, 0.870588);">Etchegaray Gonzalo</a>
+</div>
 <a style="margin-top: 22px;" mat-icon-button href="#">
-  <img src="assets/image/github.png"/>
+    <img src="assets/image/github.png" />
 </a>
